version 1.0.1 - XX-Ago-2011
. [FIX] All: Implicit atomic properties converted to nonatomic
. [FIX] All: Removed deprected code
. [FIX] Director: frames -> totalFrames, and it works as expected. Value is not being reset.
. [FIX] LabelTTF: don't crash when calling description after dealloc
. [FIX] Tests: [window release] instead of [window dealloc]
. [FIX] Texture: TextureCache#dump reports the right info (issue #1205)

version 1.0.0 - 13-July-2011
. [NEW] ccpSegmentIntersect & ccpPointIntersect: Added helper functions for ccpLineIntersect (issue #1193)
. [NEW] ccConfig: Added possibility to define the configuration as preprocessor macros
. [NEW] Director: frames is a readonly property
. [NEW] Menu: MenuItemFont can change size and font from instance (issue #1192)
. [NEW] Scheduler: Added isTargetPaused method
. [NEW] Sprite: Debugging draw for texture (issue #879)
. [NEW] Textures: PVR supports NPOT textures
. [FIX] CCArray: ForEach prepends "__" to inner variables to prevent conflict
. [FIX] ccpLineIntersect works as expected. Improved performance (issue #1174, #1193)
. [FIX] cocosLive: fixed memory leak in ScoreServerPost
. [FIX] Director: Added asserts to prevent calling startAnimation twice.
. [FIX] EAGLView: Fixed leak when using multisampling and resizing the layer (issue #1198)
. [FIX] Menu: Column aligment is centered. Removed the +10 pixels padding.
. [FIX] Node: Node#Draw calls super#draw
. [FIX] Tests: Fixed memory leak in ParticleTest
. [FIX] Tests: Fixed memory leak in cocosLiveTest
. [FIX] Tiles: Worked around memory leak in NSXMLParser (issue #1197)
. [FIX] TouchDispatcher: added setPriority (issue #757)
. [FIX] Xcode: cocos2d compiles OK with Xcode 4.2 + llvm 3.0
. [3RD] Chipmunk: updated to v5.3.5

version 1.0-rc3 - 31-May-2011
. [NEW] Actions: Added SkewTo and SkewBy actions
. [NEW] LabelTTF: Added support for LineBreakMode. Mac only supports Word-Break.
. [NEW] Node / Sprite: Added support for SkewX and SkewY properties