@@ -2,6 +2,7 @@ version 1.0.1 - XX-Ago-2011
 . [FIX] All: Implicit atomic properties converted to nonatomic
 . [FIX] All: Removed deprected code
 . [FIX] Director: frames -> totalFrames, and it works as expected. Value is not being reset.
+. [FIX] Node: vertexZ returns points, not "pixels"
 . [FIX] LabelTTF: don't crash when calling description after dealloc
 . [FIX] Tests: [window release] instead of [window dealloc]
 . [FIX] Texture: TextureCache#dump reports the right info (issue #1205)
